tests/baselines/reference/typeOfEnumAndVarRedeclarations.errors.txt
==== tests/cases/compiler/typeOfEnumAndVarRedeclarations.ts (2 errors) ====
    enum E {
        a
    }
    enum E {
        b = 1
    }
    var x = E;
    var x: { a: E; b: E;[x: number]: string; }; // Shouldnt error
    var y = E;
    var y: { a: E; b: E;[x: number]: string;[x: number]: string } // two errors: the types are not identical and duplicate signatures
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2134: Subsequent variable declarations must have the same type.  Variable 'y' must be of type 'typeof E', but here has type '{ a: E; b: E; [x: number]: string; [x: number]: string; }'.
                                            ~~~~~~~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.